<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <!--    strings.xml-->

    <string name="one_time_purchase">One Time Purchase</string>
    <string name="period_day">Day</string>
    <string name="period_days">Days</string>
    <string name="period_week">Week</string>
    <string name="period_weeks">Weeks</string>
    <string name="period_month">Month</string>
    <string name="period_months">Months</string>
    <string name="period_year">Year</string>
    <string name="period_years">Years</string>

    <string name="have_doubts">Have Doubts?</string>
    <string name="start_with_a_free_trial">Start with a free trial</string>
    <string name="now">Now</string>
    <string name="unlock_all_the_features">Unlock all the features.</string>
    <string name="today_get_instant_access">Today: Get Instant Access</string>
    <string name="day_title">Day %1s:</string>
    <string name="trial_reminder">Trial Reminder</string>
    <string name="trial_reminder_hint">Get a reminder about when your free trial will end. cancel anytime in 15 seconds.</string>
    <string name="premium_begins">Premium Begins</string>
    <string name="premium_begins_hint">Your trial will convert to full price unless cancelled.</string>
    <string name="free_then_per_period">%1s free, then %2s per %3s</string>
    <string name="pay_nothing_now">Pay Nothing Now</string>
    <string name="view_all_plans"><u>View All Plans</u></string>

    <string name="unlock_all_features">Unlock All Features</string>
    <string name="lifetime_purchase">Lifetime Purchase</string>
    <string name="payment_is_charged_after_period_cancel_anytime">Payment is charged after %1s, cancel anytime.</string>
    <string name="subscription_will_auto_renew_cancel_anytime">Subscription will auto-renew, cancel anytime.</string>

    <string name="best_value">BEST VALUE</string>
    <string name="save_percentage">SAVE %1s%%</string>
    <string name="most_popular">MOST POPULAR</string>

    <string name="lifetime">Lifetime</string>
    <string name="yearly">Yearly</string>
    <string name="monthly">Monthly</string>
    <string name="weekly">Weekly</string>

    <string name="purchase_1">1 Purchase</string>
    <string name="period_free">%1s free</string>
    <string name="upto_period" tools:ignore="Typos">upto %1s</string>

    <string name="continue_">Continue</string>
    <string name="start_my_free_trial">START MY FREE TRIAL</string>
    <string name="try_period_for_price">Try %1s for %2s</string>

    <string name="cancel_anytime_secure_with_play_store">Cancel anytime. Secure with Play Store</string>
    <string name="price_for_period_use">%1s for %2s use</string>
    <string name="price_upto_period_then_price_slash_period" tools:ignore="Typos">%1s upto %2s, then %3s</string>

    <string name="terms_of_use">Terms of Use</string>
    <string name="privacy_policy">Privacy Policy</string>

    <string name="instant_access_hint_1">Distance Measurement</string>
    <string name="instant_access_hint_2">Field Area Measurement</string>
    <string name="instant_access_hint_3">Geo Timestamp Camera</string>
    <string name="instant_access_hint_4">Route Planning</string>
    <string name="instant_access_hint_5">Data Cloud Sync</string>
    <string name="instant_access_hint_6">Ads Free</string>

    <string name="rating_header">Excellent app for Convert Text</string>
    <string name="rating_sub_header">The app is good app really need to work on the sequence of scanned image, some contents are missing and some are shuffled. App needs improvement</string>
    <string name="rating_by">by %1s</string>
    <string name="rating_user">Akshay Harsoda</string>


    <string name="satisfied_customer">Satisfied Customer</string>
    <string name="rating">Rating</string>

    <string name="pay_once_enjoy_forever">Pay once, enjoy forever</string>
    <string name="percentage_off">%1s%% OFF</string>
    <string name="price_per_period">%1s per %2s</string>
    <string name="enjoy_forever">Enjoy forever</string>
    <string name="recommend">Recommend</string>

    <string name="exit_dialog_negative_button_text">Go Back</string>
    <string name="exit_dialog_positive_button_text">Exit App</string>
    <string name="exit_dialog_title">Are you sure, you want to exit ?</string>

    <string name="update_title">Update Required</string>
    <string name="update_sub_title">We\'ve noticed that you\'ve been using the deprecated application version for a long time. Please update to the latest version and enjoy the app.</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>

    <string name="review_dialog_title">Not Interested?</string>
    <string name="review_dialog_sub_title">Please Share Why</string>
    <string name="review_option_1">Don\'t know what it is ?</string>
    <string name="review_option_2">Too expensive</string>
    <string name="review_option_3">I don\'t pay for apps</string>
    <string name="review_option_4">I need to try it first</string>

    <string name="rate_dialog_title">Enjoying the app ?</string>
    <string name="rate_dialog_sub_title">Let us know by leaving a\n5 star rating</string>
    <string name="rate_dialog_ask_me_later">Ask me later!</string>

    <string name="feedback_title">Feedback</string>
    <string name="feedback_sub_title">Share your experience with us</string>
    <string name="feedback_what_is_your_profession">What is your Profession?</string>
    <string name="feedback_write_your_suggestions">Write your Suggestions</string>
    <string name="feedback_write_here">Write Here…</string>
    <string name="feedback_write_here_suggestion">Write Here your suggestion/Feedback…</string>
    <string name="feedback_submit">Submit</string>

    <string name="internet_offline">No Internet Connection.</string>
    <string name="write_your_profession">Please enter your profession.</string>
    <string name="write_your_suggestions">Please enter your suggestions.</string>
    <string name="feedback_response_success">Feedback submitted successfully</string>
    <string name="feedback_response_error">Something went wrong, Please try again later.</string>

    <string name="try_free_nwithout_ads">Try Free\n<font color="#36C6FF">Without Ads</font></string>

    <string name="after_free_trial_period_s_per_week">After free trial period %s per week</string>
    <string name="s_free_trial">%s Free Trial</string>
    <string name="no_payment_required_now">No payment required now</string>
    <string name="desc_google_play_settings">The subscription will renew automatically at the same price and for the same period. You can manage or cancel your subscriptions at any time in your\nGoogle Play settings.</string>
    <string name="s_per_week">%s per week</string>
    <string name="google_play_settings">Google Play settings.</string>
    <string name="label_start">Start</string>

    <string name="four_plan_1">Clap To Find</string>

</resources>
